adicionando consultas na documentação
